# projects

./: .gitignore  README.md
Pong/: CMakeLists.txt  main.cpp
Timber/: CMakeLists.txt  Timber.cpp
ZombieShooter/: Bullet.cpp  CMakeLists.txt  CreateBackground.cpp  CreateHorde.cpp  Pickup.cpp  Player.cpp  Zombie.cpp  Zombie.h  ZombieArena.cpp
methodicsc/: CMakeLists.txt  bserialex.cpp  count_lines.cpp  count_lines.h  furmon.cpp  greater_than.cpp  main.cpp  serialex.cpp
methodicsg/: CMakeLists.txt  atomicex.cpp  case_studies.cpp  chronoex.cpp  conceptex.cpp  concurrencybench.cpp  concurrencyex.cpp  containers.cpp  coroutine.cpp  coroutines.cpp  createThread.cpp  filterex.cpp  generator.cpp  main.cpp  main.h  other.cpp  randomex.cpp  threadex.cpp  utility.cpp
methodicsl/: AutoBrake  AutoBrake.cpp  AutoBrake_b.cpp  CMakeLists.txt  SimpleUniquePointer.cpp  asioexamples.cpp
methodicsp/: CMakeLists.txt  tincpp.cpp
pacwoman/: Bonus.cpp  CMakeLists.txt  Character.cpp  Character.hpp  Dot.cpp  Game.cpp  GameState.cpp  GameState.hpp  Ghost.cpp  Ghost.hpp  Maze.cpp  Maze.hpp  PacWoman.cpp  PacWoman.hpp
