cmake_minimum_required(VERSION 3.5)

project (methodicsg)

#add_definitions("-std=c++17")
add_definitions("-std=c++20")
#add_definitions("-std=c++23")

#set(SRC SimpleUniquePointer.cpp)
#set(SRC AutoBrake.cpp)
#set(SRC chronoex.cpp)
#set(SRC generator.cpp)
#set(SRC randomex.cpp)
#set(SRC coroutine.cpp)
#set(SRC coroutines.cpp)
#set(SRC atomicex.cpp)
#set(SRC concurrencyex.cpp)
#set(SRC case_studies.cpp)
#set(SRC pingPongSemaphore.cpp)
#set(SRC threadex.cpp)
#set(SRC filterex.cpp)
#set(SRC conceptex.cpp)
#set(SRC examples.cpp)
set(SRC createThread.cpp concurrencybench.cpp main.cpp)
#set(SRC containers.cpp)
#set(SRC asioserver.cpp)

add_executable(${PROJECT_NAME} ${SRC})
